[gd_scene load_steps=2 format=3 uid="uid://b55mcpiybk3g5"]

[ext_resource type="Script" path="res://levels/win/win.gd" id="1_pp8nh"]

[node name="Win" type="Node"]
script = ExtResource("1_pp8nh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 72)

[node name="Label" type="Label" parent="."]
offset_left = 109.0
offset_top = 44.0
offset_right = 125.0
offset_bottom = 67.0
text = "W"

[node name="Label2" type="Label" parent="."]
offset_left = 131.0
offset_top = 53.0
offset_right = 136.0
offset_bottom = 76.0
text = "I"

[node name="Label3" type="Label" parent="."]
offset_left = 143.0
offset_top = 62.0
offset_right = 156.0
offset_bottom = 85.0
text = "N"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
